Correct the alignment of the loading spinner

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1331,7 +1331,7 @@ input[type='checkbox'] {
     height: 28px;
     left: 50%;
     margin-left: -14px;
-    margin-top: 16px;
+    margin-top: 10px;
     position: absolute;
     width: 28px;
     font-size: 0;
